# UCAS-CProgrammingClass-final-ChessGameWithAI

./: CMakeLists.txt  README.md  cmake_build.bat  hash.c
src/: main.c
src/ai/: ai.c  ai.h  evaluate.c  evaluate.h  tt.c  tt.h
src/board/: board.c  board.h
src/display/: display.c  display.h
src/rule/: rule.c  rule.h
test/: test_rule.c
